Bug 75707: Some BIG5 characters can not be displayed properly in Solaris Trunk add a boolean value to valid the med checking in for ftang